tests/reference/asr-test_compare_02-bf2c76e.stderr
semantic error: Type mismatch in comparison operator, the types must be compatible
 --> tests/errors/test_compare_02.py:6:11
  |
6 |     print(x > y)
  |           ^   ^ type mismatch ('i32' and 'u32')


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
